--- a/HackLock/HackLock/Client/Pages/Index.razor
+++ b/HackLock/HackLock/Client/Pages/Index.razor
@@ -1,7 +1,31 @@
 ﻿@page "/"
+<div style="margin-top: 10%;">
+    <div class="loginContainer">
+        <h1 style="text-align: center; margin-bottom: 30px;">HackLock</h1>
+        @if (!Unlocked)
+        {
+            <Login UnlockCallback="UnlockCallback"/>
+        }
+        else
+        {
+            <Unlocked FinishedCallback="@(() => LockCallback())" InitialTime="30"/>
+        }
+        
+        
+    </div>
 
-<h1>Hello, world!</h1>
+    
+</div>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+    private bool Unlocked { get; set; }
+
+
+    private void UnlockCallback() => 
+        Unlocked = true;
+
+    private void LockCallback() =>
+        Unlocked = false;
+
+}
